spacing change and item placement fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -148,12 +148,13 @@ UTILITIES
 .container {
   max-width: min(calc(100% - var(--offset-small) * 2), 40rem);
   margin-inline: auto;
+  padding-block: 5rem;
 }
 
 .main-grid {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  gap: 0.75rem;
+  gap: 0.5rem;
 }
 
 .bg-white {
@@ -175,7 +176,7 @@ DATEPICKER LAYOUT
 
   aspect-ratio: 1;
   display: grid;
-  place-items: center;
+  place-content: center;
 }
 
 .button-nav {
